@@ -241,12 +241,6 @@ namespace libtorrent
 		, m_seed_mode(false)
 		, m_super_seeding(false)
 		, m_stop_when_ready((p.flags & add_torrent_params::flag_stop_when_ready) != 0)
-#ifndef TORRENT_NO_DEPRECATE
-#ifndef TORRENT_DISABLE_RESOLVE_COUNTRIES
-		, m_resolving_country(false)
-		, m_resolve_countries(false)
-#endif
-#endif
 		, m_need_save_resume_data((p.flags & add_torrent_params::flag_need_save_resume) != 0)
 		, m_seeding_time(0)
 		, m_max_uploads((1<<24)-1)
@@ -6453,166 +6447,6 @@ namespace libtorrent
 		}
 	}
 
-#ifndef TORRENT_NO_DEPRECATE
-	// deprecated in 1.1
-#ifndef TORRENT_DISABLE_RESOLVE_COUNTRIES
-	namespace
-	{
-		unsigned long swap_bytes(unsigned long a)
-		{
-			return (a >> 24) | ((a & 0xff0000) >> 8) | ((a & 0xff00) << 8) | ((a & 0xff) << 24);
-		}
-	}
-
-	void torrent::resolve_countries(bool r)
-	{ m_resolve_countries = r; }
-
-	bool torrent::resolving_countries() const
-	{
-		return m_resolve_countries && !settings().get_bool(settings_pack::force_proxy);
-	}
-
-	void torrent::resolve_peer_country(boost::shared_ptr<peer_connection> const& p) const
-	{
-		TORRENT_ASSERT(is_single_thread());
-		if (m_resolving_country
-			|| is_local(p->remote().address())
-			|| p->has_country()
-			|| p->is_connecting()
-			|| p->in_handshake()
-			|| p->remote().address().is_v6()) return;
-
-		boost::asio::ip::address_v4 reversed(swap_bytes(p->remote().address().to_v4().to_ulong()));
-		error_code ec;
-		std::string hostname = reversed.to_string(ec) + ".zz.countries.nerd.dk";
-		if (ec)
-		{
-			p->set_country("!!");
-			return;
-		}
-		m_resolving_country = true;
-		m_ses.async_resolve(hostname, resolver_interface::abort_on_shutdown
-			, boost::bind(&torrent::on_country_lookup, shared_from_this(), _1, _2, p));
-	}
-
-	namespace
-	{
-		struct country_entry
-		{
-			int code;
-			char const* name;
-		};
-	}
-
-	void torrent::on_country_lookup(error_code const& error
-		, std::vector<address> const& host_list
-		, boost::shared_ptr<peer_connection> p) const
-	{
-		TORRENT_ASSERT(is_single_thread());
-
-		INVARIANT_CHECK;
-
-		m_resolving_country = false;
-
-		if (m_abort) return;
-
-		// must be ordered in increasing order
-		static const country_entry country_map[] =
-		{
-			{  4,  "AF"}, {  8,  "AL"}, { 10,  "AQ"}, { 12,  "DZ"}, { 16,  "AS"}
-			, { 20,  "AD"}, { 24,  "AO"}, { 28,  "AG"}, { 31,  "AZ"}, { 32,  "AR"}
-			, { 36,  "AU"}, { 40,  "AT"}, { 44,  "BS"}, { 48,  "BH"}, { 50,  "BD"}
-			, { 51,  "AM"}, { 52,  "BB"}, { 56,  "BE"}, { 60,  "BM"}, { 64,  "BT"}
-			, { 68,  "BO"}, { 70,  "BA"}, { 72,  "BW"}, { 74,  "BV"}, { 76,  "BR"}
-			, { 84,  "BZ"}, { 86,  "IO"}, { 90,  "SB"}, { 92,  "VG"}, { 96,  "BN"}
-			, {100,  "BG"}, {104,  "MM"}, {108,  "BI"}, {112,  "BY"}, {116,  "KH"}
-			, {120,  "CM"}, {124,  "CA"}, {132,  "CV"}, {136,  "KY"}, {140,  "CF"}
-			, {144,  "LK"}, {148,  "TD"}, {152,  "CL"}, {156,  "CN"}, {158,  "TW"}
-			, {162,  "CX"}, {166,  "CC"}, {170,  "CO"}, {174,  "KM"}, {175,  "YT"}
-			, {178,  "CG"}, {180,  "CD"}, {184,  "CK"}, {188,  "CR"}, {191,  "HR"}
-			, {192,  "CU"}, {203,  "CZ"}, {204,  "BJ"}, {208,  "DK"}, {212,  "DM"}
-			, {214,  "DO"}, {218,  "EC"}, {222,  "SV"}, {226,  "GQ"}, {231,  "ET"}
-			, {232,  "ER"}, {233,  "EE"}, {234,  "FO"}, {238,  "FK"}, {239,  "GS"}
-			, {242,  "FJ"}, {246,  "FI"}, {248,  "AX"}, {250,  "FR"}, {254,  "GF"}
-			, {258,  "PF"}, {260,  "TF"}, {262,  "DJ"}, {266,  "GA"}, {268,  "GE"}
-			, {270,  "GM"}, {275,  "PS"}, {276,  "DE"}, {288,  "GH"}, {292,  "GI"}
-			, {296,  "KI"}, {300,  "GR"}, {304,  "GL"}, {308,  "GD"}, {312,  "GP"}
-			, {316,  "GU"}, {320,  "GT"}, {324,  "GN"}, {328,  "GY"}, {332,  "HT"}
-			, {334,  "HM"}, {336,  "VA"}, {340,  "HN"}, {344,  "HK"}, {348,  "HU"}
-			, {352,  "IS"}, {356,  "IN"}, {360,  "ID"}, {364,  "IR"}, {368,  "IQ"}
-			, {372,  "IE"}, {376,  "IL"}, {380,  "IT"}, {384,  "CI"}, {388,  "JM"}
-			, {392,  "JP"}, {398,  "KZ"}, {400,  "JO"}, {404,  "KE"}, {408,  "KP"}
-			, {410,  "KR"}, {414,  "KW"}, {417,  "KG"}, {418,  "LA"}, {422,  "LB"}
-			, {426,  "LS"}, {428,  "LV"}, {430,  "LR"}, {434,  "LY"}, {438,  "LI"}
-			, {440,  "LT"}, {442,  "LU"}, {446,  "MO"}, {450,  "MG"}, {454,  "MW"}
-			, {458,  "MY"}, {462,  "MV"}, {466,  "ML"}, {470,  "MT"}, {474,  "MQ"}
-			, {478,  "MR"}, {480,  "MU"}, {484,  "MX"}, {492,  "MC"}, {496,  "MN"}
-			, {498,  "MD"}, {500,  "MS"}, {504,  "MA"}, {508,  "MZ"}, {512,  "OM"}
-			, {516,  "NA"}, {520,  "NR"}, {524,  "NP"}, {528,  "NL"}, {530,  "AN"}
-			, {533,  "AW"}, {540,  "NC"}, {548,  "VU"}, {554,  "NZ"}, {558,  "NI"}
-			, {562,  "NE"}, {566,  "NG"}, {570,  "NU"}, {574,  "NF"}, {578,  "NO"}
-			, {580,  "MP"}, {581,  "UM"}, {583,  "FM"}, {584,  "MH"}, {585,  "PW"}
-			, {586,  "PK"}, {591,  "PA"}, {598,  "PG"}, {600,  "PY"}, {604,  "PE"}
-			, {608,  "PH"}, {612,  "PN"}, {616,  "PL"}, {620,  "PT"}, {624,  "GW"}
-			, {626,  "TL"}, {630,  "PR"}, {634,  "QA"}, {634,  "QA"}, {638,  "RE"}
-			, {642,  "RO"}, {643,  "RU"}, {646,  "RW"}, {654,  "SH"}, {659,  "KN"}
-			, {660,  "AI"}, {662,  "LC"}, {666,  "PM"}, {670,  "VC"}, {674,  "SM"}
-			, {678,  "ST"}, {682,  "SA"}, {686,  "SN"}, {690,  "SC"}, {694,  "SL"}
-			, {702,  "SG"}, {703,  "SK"}, {704,  "VN"}, {705,  "SI"}, {706,  "SO"}
-			, {710,  "ZA"}, {716,  "ZW"}, {724,  "ES"}, {732,  "EH"}, {736,  "SD"}
-			, {740,  "SR"}, {744,  "SJ"}, {748,  "SZ"}, {752,  "SE"}, {756,  "CH"}
-			, {760,  "SY"}, {762,  "TJ"}, {764,  "TH"}, {768,  "TG"}, {772,  "TK"}
-			, {776,  "TO"}, {780,  "TT"}, {784,  "AE"}, {788,  "TN"}, {792,  "TR"}
-			, {795,  "TM"}, {796,  "TC"}, {798,  "TV"}, {800,  "UG"}, {804,  "UA"}
-			, {807,  "MK"}, {818,  "EG"}, {826,  "GB"}, {834,  "TZ"}, {840,  "US"}
-			, {850,  "VI"}, {854,  "BF"}, {858,  "UY"}, {860,  "UZ"}, {862,  "VE"}
-			, {876,  "WF"}, {882,  "WS"}, {887,  "YE"}, {891,  "CS"}, {894,  "ZM"}
-		};
-
-		if (error || host_list.empty())
-		{
-			// this is used to indicate that we shouldn't
-			// try to resolve it again
-			p->set_country("--");
-			return;
-		}
-
-		int idx = 0;
-		while (idx < host_list.size() && !host_list[idx].is_v4())
-			++idx;
-
-		if (idx >= host_list.size())
-		{
-			p->set_country("--");
-			return;
-		}
-
-		// country is an ISO 3166 country code
-		int country = host_list[idx].to_v4().to_ulong() & 0xffff;
-
-		// look up the country code in the map
-		const int size = sizeof(country_map)/sizeof(country_map[0]);
-		country_entry tmp = {country, ""};
-		country_entry const* j =
-			std::lower_bound(country_map, country_map + size, tmp
-				, boost::bind(&country_entry::code, _1) < boost::bind(&country_entry::code, _2));
-		if (j == country_map + size
-			|| j->code != country)
-		{
-			// unknown country!
-			p->set_country("!!");
-#ifndef TORRENT_DISABLE_LOGGING
-			debug_log("IP \"%s\" was mapped to unknown country: %d"
-				, print_address(p->remote().address()).c_str(), country);
-#endif
-			return;
-		}
-
-		p->set_country(j->name);
-	}
-#endif
-#endif // TORRENT_NO_DEPRECATE
-
 	boost::shared_ptr<const torrent_info> torrent::get_torrent_copy()
 	{
 		if (!m_torrent_file->is_valid()) return boost::shared_ptr<const torrent_info>();
@@ -7007,13 +6841,6 @@ namespace libtorrent
 			peer_info& p = v->back();
 
 			peer->get_peer_info(p);
-#ifndef TORRENT_NO_DEPRECATE
-			// deprecated in 1.1
-#ifndef TORRENT_DISABLE_RESOLVE_COUNTRIES
-			if (resolving_countries())
-				resolve_peer_country(peer->self());
-#endif
-#endif // TORRENT_NO_DEPRECATE
 		}
 	}
 
